Logout and user session added
